<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#072A40"
    android:contentDescription="@string/ScrollView">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#072A40"
        tools:context=".MainActivity">


        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/status">

            <Button
                android:id="@+id/finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:layout_weight="1"
                android:maxWidth="150dp"
                android:minWidth="88dp"
                android:onClick="onFinish"
                android:text="@string/finish"
                android:visibility="invisible" />

            <Button
                android:id="@+id/play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:maxWidth="150dp"
                android:minWidth="88dp"
                android:onClick="playAgain"
                android:text="@string/play"
                android:visibility="invisible" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="monospace"
            android:letterSpacing=".5"
            android:text="@string/ScoreCard"
            android:textColor="#88E1F8"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="30sp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Player1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/player1"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/score1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="60sp" />

            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:background="#88E1F8" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Player2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/player2"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/score2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="60sp" />
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="400sp"
            android:layout_height="400sp"
            android:contentDescription="@string/gridbox"
            android:cropToPadding="false"
            android:maxHeight="800dp"
            android:minHeight="400dp"
            android:padding="30dp"
            app:layout_constraintBottom_toTopOf="@id/status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:srcCompat="@drawable/gridlines" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="40sp"
            app:layout_constraintBottom_toBottomOf="@id/imageView"
            app:layout_constraintEnd_toEndOf="@id/imageView"
            app:layout_constraintStart_toStartOf="@id/imageView"
            app:layout_constraintTop_toTopOf="@id/imageView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/description"
                    android:onClick="onTap"
                    android:padding="10dp"
                    android:tag="0"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/description"
                    android:onClick="onTap"
                    android:padding="10dp"
                    android:tag="1" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/description"
                    android:onClick="onTap"
                    android:padding="10dp"
                    android:tag="2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/description"
                    android:onClick="onTap"
                    android:padding="10dp"
                    android:tag="3" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/description"
                    android:onClick="onTap"
                    android:padding="10dp"
                    android:tag="4" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/description"
                    android:onClick="onTap"
                    android:padding="10dp"
                    android:tag="5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/description"
                    android:onClick="onTap"
                    android:padding="10dp"
                    android:tag="6" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/description"
                    android:onClick="onTap"
                    android:padding="10dp"
                    android:tag="7" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/description"
                    android:onClick="onTap"
                    android:padding="10dp"
                    android:tag="8" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Status"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

